[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/video/aotd_intro_final.ogv" type="VideoStream" id=1]
[ext_resource path="res://src/level/game/intro.gd" type="Script" id=2]
[ext_resource path="res://src/themes/theme.tres" type="Theme" id=3]

[node name="intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
loading_bar_fill_speed = 250

[node name="intro_video" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 1 )

[node name="input_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="mouse_timer" type="Timer" parent="."]
one_shot = true

[node name="skipper" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="text_timer" type="Timer" parent="skipper"]
one_shot = true

[node name="skip_label" type="RichTextLabel" parent="skipper"]
visible = false
modulate = Color( 1, 0.921569, 0.87451, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 264.0
margin_top = 350.0
margin_right = 914.0
margin_bottom = 445.0
bbcode_enabled = true
bbcode_text = " [b][color=#ffebdf] Hold Space to skip[/color][/b]"
text = "  Hold Space to skip"
fit_content_height = true

[node name="progress_bar" type="ProgressBar" parent="skipper"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 364.0
margin_top = 434.0
margin_right = 734.0
margin_bottom = 484.0

[connection signal="finished" from="intro_video" to="." method="_on_intro_video_finished"]
[connection signal="timeout" from="input_timer" to="." method="_on_input_timer_timeout"]
[connection signal="timeout" from="mouse_timer" to="." method="_on_mouse_timer_timeout"]
[connection signal="timeout" from="skipper/text_timer" to="." method="_on_text_timer_timeout"]
